# Telegram-Bots-Hub

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  install.sh  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main.yml
api/: deps.py  enums.py  exception_handlers.py  exceptions.py  router.py  schemas.py
api/routes/bots/: __init__.py  endpoints.py  models.py  router.py
bot/: __init__.py  bot.py  context.py  dispatcher.py  exceptions.py  handler.py  middlewares.py  request.py  storage.py  tasks.py  utils.py  variables.py
bot/background/: manager.py
bot/background/tasks/: __init__.py  base.py  monitor_token.py  process_service_tasks.py
bot/handlers/: base.py  condition.py  connection.py  database_operation.py  invoice.py  temporary_variable.py  trigger.py  update.py
bot/handlers/api_request/: __init__.py  handler.py  resolver.py  utils.py
bot/handlers/command/: __init__.py  data.py  handler.py  utils.py
bot/handlers/message/: __init__.py  data.py  handler.py  types.py  utils.py
bot/storage/: __init__.py  models.py  storage.py
bot/utils/: __init__.py  deserializers.py  html.py  text.py  text_processing.py  validation.py  variables.py
core/: dispatcher.py  enums.py  exceptions.py  gunicorn.py  models.py  msgspec.py  redis.py  settings.py  storage.py
core/routes/: bots.py
service/: __init__.py  api.py  base_models.py  client.py  data.py  enums.py  models.py  schemas.py  types.py
telegram/: client.py  constants.py  enums.py  exceptions.py  models.py  types.py  utils.py
