[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
dacite = "^1.8.1"
aiohttp = "^3.9.5"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
yarl = "^1.9.4"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.10"
gunicorn = "^23.0.0"
multidict = "^6.6.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_unreachable = true
warn_no_return = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20",  # flake8-print
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "fastapi",
    "telegram",
    "third-party",
    "first-party",
    "local-folder",
    "standard-library",
]
from-first = true

[tool.ruff.lint.isort.sections]
fastapi = ["fastapi"]
telegram = ["telegram"]

[tool.ruff.format]
quote-style = "single"
