[project]
name = "telegram-bots-hub"
version = "2.4.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.129,<0.130",
    "aiohttp>=3.13,<3.14",
    "uvicorn>=0.41,<0.42",
    "pydantic>=2.12,<2.13",
    "yarl>=1.22,<1.23",
    "python-dotenv>=1.2,<1.3",
    "gunicorn>=25,<26",
    "multidict>=6.7,<6.8",
    "redis>=7.2,<7.3",
    "msgspec>=0.20,<0.21",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<1.20",
    "ruff>=0.15,<0.16",
]

[tool.uv]
package = false

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_unreachable = true
warn_no_return = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20",  # flake8-print
    "FBT003",  # flake8-boolean-trap: boolean positional value in function call
    "DTZ",  # flake8-datetimez
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",  # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "TRY",  # tryceratops
    "FAST",  # FastAPI
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
    "RET505",  # unnecessary {branch} after return statement
    "RET506",  # unnecessary {branch} after raise statement
    "RET507",  # unnecessary {branch} after continue statement
    "RET508",  # unnecessary {branch} after break statement
    "TRY003",  # avoid specifying long messages outside the exception class
    "TRY201",  # use raise without specifying exception name
    "TRY300",  # consider moving this statement to an else block
]


[tool.ruff.lint.isort]
section-order = [
    "future",
    "fastapi",
    "telegram",
    "third-party",
    "first-party",
    "local-folder",
    "standard-library",
]
from-first = true

[tool.ruff.lint.isort.sections]
fastapi = ["fastapi"]
telegram = ["telegram"]

[tool.ruff.format]
quote-style = "single"
